# CS3505-Texas-Hold-em-Poker-Teacher

./: README.md
PokerTeacher/: BotAction.h  CMakeLists.txt  action.h  card.cpp  card.h  card_images.qrc  cardhand.cpp  cardhand.h  cardlibrary.cpp  cardlibrary.h  cardvalue.h  checklist.md  computerplayer.cpp  computerplayer.h  decision.h  deck.cpp  deck.h  definition.cpp  definition.h  game.cpp  game.h  game_BACKUP_807.cpp  game_LOCAL_328.cpp  game_REMOTE_1917.h  game_REMOTE_837.cpp  glossary.txt  glossarydialog.cpp  glossarydialog.h  glossarydialog.ui  hand_hierarchy  hand_hierarchy.txt  handtype.h  infobox.cpp  infobox.h  infobox.ui  lesson.cpp  lesson.h  main.cpp  phase.h  player.cpp  (+6 more)
PokerTeacher/Lessons/0-The_Board/: 0.html  1.html  2.html  3.html  4.html  5.html  6.html  7.html  gameResets.txt
PokerTeacher/Lessons/1-Hand_Types_and_Position/: 0.html  1.deck  1.html  1.json  10.html  11.html  12.deck  12.html  12.json  13.html  14.html  15.html  2.deck  3.html  4.deck  4.html  4.json  5.html  6.html  6.json  7.html  7.json  8.html  9.deck  9.html  9.json  actions.csv  deck.txt  deckStart.txt  gameMoves.csv
PokerTeacher/Lessons/1-TestLesson/: 0.html
PokerTeacher/Lessons/2-Hand_&_Board_Harmony/: 1.html  10.html  14.html  19.html  2.html  20.html  22.html  4.html  6.html  9.html
PokerTeacher/Lessons/2-Hand_and_Board_Harmony/: 0.html  1.deck  1.html  10.deck  10.html  11.html  12.html  12.json  13.html  14.deck  14.html  14.json  15.html  16.html  17.html  19.html  2.html  2.json  21.html  22.html  3.html  4.html  5.deck  5.html  6.html  6.json  7.html  8.html  8.json  9.html  actions.csv  decision1  deckStart.txt
PokerTeacher/Lessons/2-TestLesson/: 0.html  1.html
PokerTeacher/Lessons/3-Push_or_Protect/: 0.html  1.deck  1.html  10.deck  10.html  12.html  12.json  13.html  16.html  17.html  2.html  2.json  21.html  3.html  4.html  5.deck  5.html  5.json  6.html  7.html  8.html  8.json  9.html  actions.csv
PokerTeacher/Lessons/4-The_Chase_Calculator/: 0.html  1.deck  1.html  10.html  11.deck  11.html  12.html  13.json  15.html  16.deck  16.html  16.json  17.html  18.html  19.html  2.html  21.html  22.html  3.html  3.json  4.html  5.html  7.deck  7.html  8.json  9.html  actions.csv  d0.txt
PokerTeacher/Lessons/5-The_Bluffing_Blueprint/: 0.html  1.deck  1.html  10.deck  10.html  11.html  11.json  12.html  13.html  14.deck  14.html  15.html  15.json  17.html  18.html  19.html  2.html  2.json  22.html  3.html  4.html  5.deck  5.html  6.html  7.html  7.json  8.html  9.html  actions.csv  gameMoves.csv
PokerTeacher/Lessons/6-Reading_Minds/: 0.html  1.html  10.html  11.deck  11.html  12.html  13.html  14.html  14.json  15.html  16.html  17.deck  17.html  18.html  19.html  2.deck  2.html  20.html  21.html  22.html  23.html  23.json  24.html  25.html  3.html  3.json  4.html  5.html  6.html  7.deck  7.html  7.json  8.html  9.html  actions.csv
PokerTeacher/PokerTests/: CMakeLists.txt  main.cpp  test_data.qrc  texas_holdem_glossary.txt  tst_cardhandtests.cpp  tst_lessontests.cpp
PokerTeacher/PokerTests/Lessons/2-TestLesson/: cpuActions.csv
